--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.2.2",
+    "discord-interactions": "^3.2.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
-  }
+  },
+  "devDependencies": {
+    "discord-api-types": "^0.37.26"
+  },
+  "author": "mmvergara"
 }
