--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mmv-nextjs-discord-bot-template",
+  "name": "nextjs-discord-bot-boilerplate",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,21 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@discordjs/builders": "^1.4.0",
-    "@next/font": "13.1.1",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "axios": "^1.2.2",
-    "discord-interactions": "^3.2.0",
-    "next": "13.1.1",
+    "@types/node": "20.5.9",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "axios": "^1.5.0",
+    "discord-interactions": "^3.4.0",
+    "discord.js": "^14.13.0",
+    "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tweetnacl": "^1.0.3",
-    "typescript": "4.9.4"
-  },
-  "devDependencies": {
-    "discord-api-types": "^0.37.26"
-  },
-  "author": "mmvergara"
+    "typescript": "5.2.2"
+  }
 }
