Update .env.example file with custom secret key for command registration

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
-# your bot's application ID
 NEXT_PUBLIC_APPLICATION_ID=
-# your bot's public key
 PUBLIC_KEY=
-# your bot's token
 BOT_TOKEN=
-# custom key
+
+
+# Custom secret key to register your commands
 REGISTER_COMMANDS_KEY=
